# FaaSr-Integration-Tests

./: GLM.json  GLMTutorialWorkflow-demotest.json  README.md  WeatherGeographicPlot.json  WeatherGeographicPlotRanked_for_testing.json  WeatherVisualizationDataStores_for_testing.json  geographic_weather_plot_for_testing_plot.json  invoke_workflow.sh  pyproject.toml  register_workflow.sh  run_glm_tutorial.R  weather_visualization_py.json
.github/workflows/: FaaSrGLMTutorialWorkflow-NullStart.yml  FaaSrSecretWorkflow-python-secret.yml  (+43 more)
docs/: design-docs.md
faasr_workflow/: .gitignore  FaaSrGLMTutorialWorkflow.json  GLMTutorialWorkflow-demo.json  GLMTutorialWorkflow.json  IntegrationTestWorkflowOWPulumi.json  PythonImportsFailWorkflow.json  WeatherGeographicPlotRanked_for_testing_2.json  WeatherVisualizationB2.json  WeatherVisualizationConditional_for_testing.json  geographic_weather_plot_for_testing_plot_2.json  weather_visualizatoin_for_testing.json
framework/: faasr_function.py  faasr_function_logger.py  s3_client.py  workflow_runner.py
integration_tests/: conftest.py  test_faasr_secret_workflow.py  test_integration_test_workflow.py  test_python_imports_workflow.py  test_traceback_logging_workflow.py
scripts/: register_workflow.py  sync_secret.py
tests/: conftest.py  test_faasr_function_logger.py  test_workflow_runner.py
workflows/: FaaSrSecretWorkflow.json  IntegrationTestWorkflowOW.json  IntegrationTestWorkflowOWArm.json  IntegrationTestWorkflowOWPulumi.json  PythonImportsFailWorkflow.json  PythonImportsPassWorkflow.json  TracebackLoggingTestWorkflow.json
(+46 files in other folders)
