[project]
name = "faasr-integration-tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faasr-py",
    "pandas>=2.3.3",
    "pygithub>=2.8.1",
    "python-dotenv>=1.2.1",
]

[tool.uv.sources]
faasr-py = { git = "https://github.com/JStover95/FaaSr-Backend-Fork.git", rev = "feature/JStover95/faasr-secret-github-actions" }

[dependency-groups]
dev = [
    "boto3-stubs[s3]>=1.40.70",
]
